<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestSimpleXmlWithListView</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Hosts</string>
    <string name="title_section1">Clusters</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dummy_screen">DummyScreen</string>
    <string name="Url">Url</string>
    <string name="username">Username</string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="title_activity_cluster_tab_fragment">ClusterTabFragment</string>
    <string name="title_activity_server_tab_fragment">ServerTabFragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_volume_display">Volumes</string>
    <string name="large_text">Large Text</string>
    <string name="title_activity_cluster_display">Clusters</string>
    <string name="title_activity_cluster_properties">ClusterProperties</string>
    <string name="NULL"></string>
    <string name="signin">SignIn</string>
    <string name="Domain">Domain</string>
    <string name="title_activity_volume_hosts">Volumes And Hosts</string>
    <string name="title_activity_hosts_display">Hosts</string>
    <string name="title_activity_brick_option_display">Bricks And Options</string>
    <string name="title_activity_login_main">Login</string>
    <string name="SignIn">Sign In</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="HostName">Host Name</string>
    <string name="title_activity_volume_properties">VolumeProperties</string>
    <string name="title_activity_host_properties">HostPropertiesActivity</string>
    <string name="title_activity_brick_property">BrickPropertyActivity</string>
    <string name="title_activity_start_volume">StartVolumeActivity</string>
    <string name="title_activity_volume_start_stop">VolumeStartStopActivity</string>
    <string name="title_activity_cluster_add">Create Cluster</string>
    <string name="EnterClusterDetails">Enter Cluster Details</string>
    <string name="DataCenter">Data Center</string>
    <string name="Name">Name</string>
    <string name="CpuId">Cpu Id</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="title_activity_volume_create">VolumeCreateActivity</string>
    <string name="CreateVolume">Create Volume</string>
    <string name="VolumeCluster">Volume Cluster</string>
    <string name="VolumeType">Volume Type</string>
    <string name="ServerId">Server Id</string>
    <string name="BrickDirectory">Brick Directory</string>
    <string name="Create">Create</string>
    <string name="title_activity_add_brick">AddBrickActivity</string>
    <string name="AddBricks">Add Bricks</string>
    <string name="BrickDir">Brick Dir</string>
    <string name="Done">Done</string>
    <string name="Host">Select Host</string>
    <string name="AccessProtocols">Access Protocols</string>
    <string name="Gluster">Gluster</string>
    <string name="NFS">NFS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_brick_add">BrickAddActivity</string>
    <string name="AllowAccessFrom">Allow Access From</string>
    <string name="ClusterAccessPermissionsHint">(Comma separated list of IP addresses/hostnames)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="ApplicationSettings">Application Settings</string>
    <string name="Next">Next</string>
    <string name="SMB">SMB(CIFS)</string>
    <string name="title_activity_splash">WELCOME</string>
    <string name="redHat"> REDHAT</string>

</resources>